--- a/src/GUI/AdminPage.form
+++ b/src/GUI/AdminPage.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Login.AdminPage">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.AdminPage">
   <grid id="27dc6" binding="Panel1" layout-manager="GridLayoutManager" row-count="5" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -44,7 +44,7 @@
               <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <icon value="Login/software-engineer.png"/>
+              <icon value="GUI/Images/software-engineer.png"/>
               <text value=""/>
             </properties>
           </component>
@@ -60,7 +60,7 @@
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <icon value="trabajo-en-equipo.png"/>
+          <icon value="GUI/Images/trabajo-en-equipo.png"/>
           <text value=""/>
         </properties>
       </component>
@@ -92,7 +92,7 @@
           <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <icon value="parque-de-atracciones(1).png"/>
+          <icon value="GUI/Images/parque-de-atracciones(1).png"/>
           <text value=""/>
         </properties>
       </component>
@@ -120,7 +120,7 @@
           <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <icon value="teatro(2).png"/>
+          <icon value="GUI/Images/teatro(2).png"/>
           <text value=""/>
         </properties>
       </component>
@@ -154,7 +154,7 @@
         <properties>
           <font name="JetBrains Mono ExtraBold" size="9"/>
           <foreground color="-12235695"/>
-          <icon value="cross.png"/>
+          <icon value="GUI/Images/cross.png"/>
           <text value="SALIR"/>
         </properties>
       </component>
