--- a/src/GUI/EmployeePage.form
+++ b/src/GUI/EmployeePage.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Login.EmployeePage">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.EmployeePage">
   <grid id="27dc6" binding="MainPanel" layout-manager="GridLayoutManager" row-count="9" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="10"/>
     <constraints>
@@ -46,7 +46,7 @@
               <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <icon value="Login/software-engineer.png"/>
+              <icon value="GUI/Images/software-engineer.png"/>
               <text value=""/>
             </properties>
           </component>
@@ -72,7 +72,7 @@
               <grid row="2" column="1" row-span="2" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <icon value="Login/tower-of-hercules.png"/>
+              <icon value="GUI/Images/tower-of-hercules.png"/>
               <text value=""/>
             </properties>
           </component>
@@ -103,7 +103,7 @@
         </constraints>
         <properties>
           <horizontalTextPosition value="0"/>
-          <icon value="Login/alquiler.png"/>
+          <icon value="GUI/Images/alquiler.png"/>
           <text value="Añadir Empleado"/>
           <verticalAlignment value="3"/>
           <verticalTextPosition value="3"/>
@@ -140,7 +140,7 @@
         </constraints>
         <properties>
           <horizontalTextPosition value="0"/>
-          <icon value="Login/comportamiento.png"/>
+          <icon value="GUI/Images/comportamiento.png"/>
           <text value="Actualizar Empleado"/>
           <verticalAlignment value="3"/>
           <verticalTextPosition value="3"/>
@@ -152,7 +152,7 @@
         </constraints>
         <properties>
           <horizontalTextPosition value="0"/>
-          <icon value="Login/salario.png"/>
+          <icon value="GUI/Images/salario.png"/>
           <text value="Salarios"/>
           <verticalAlignment value="3"/>
           <verticalTextPosition value="3"/>
@@ -164,7 +164,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono ExtraBold" size="9"/>
-          <icon value="cross.png"/>
+          <icon value="GUI/Images/cross.png"/>
           <text value="SALIR"/>
         </properties>
       </component>
@@ -174,7 +174,7 @@
         </constraints>
         <properties>
           <horizontalTextPosition value="0"/>
-          <icon value="Login/despedido(1).png"/>
+          <icon value="GUI/Images/despedido(1).png"/>
           <text value="Despedir Empleados"/>
           <verticalAlignment value="3"/>
           <verticalTextPosition value="3"/>
@@ -186,7 +186,7 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono ExtraBold" size="9"/>
-          <icon value="Login/girar-a-la-izquierda.png"/>
+          <icon value="GUI/Images/girar-a-la-izquierda.png"/>
           <text value="VOLVER"/>
         </properties>
       </component>
