--- a/src/GUI/EmployeePage.form
+++ b/src/GUI/EmployeePage.form
@@ -72,7 +72,7 @@
               <grid row="2" column="1" row-span="2" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <icon value="GUI/Images/tower-of-hercules.png"/>
+              <icon value="GUI/Images/pulpo.png"/>
               <text value=""/>
             </properties>
           </component>
