--- a/src/GUI/EmployeePage.form
+++ b/src/GUI/EmployeePage.form
@@ -17,7 +17,7 @@
           <grid row="0" column="0" row-span="9" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-16186989"/>
+          <background color="-16252591"/>
         </properties>
         <border type="none"/>
         <children>
@@ -67,7 +67,7 @@
               <text value="ADMINISTRADOR"/>
             </properties>
           </component>
-          <component id="5578" class="javax.swing.JLabel">
+          <component id="5578" class="javax.swing.JLabel" binding="pulpoMiguel">
             <constraints>
               <grid row="2" column="1" row-span="2" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
