--- a/src/GUI/HireEmployee.form
+++ b/src/GUI/HireEmployee.form
@@ -137,7 +137,7 @@
           <horizontalAlignment value="0"/>
         </properties>
       </component>
-      <component id="f75c3" class="javax.swing.JButton" binding="BUSCARButton" default-binding="true">
+      <component id="f75c3" class="javax.swing.JButton" binding="ANHADIRButton">
         <constraints>
           <grid row="33" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
