--- a/src/GUI/UserPage.form
+++ b/src/GUI/UserPage.form
@@ -3,14 +3,14 @@
   <grid id="27dc6" layout-manager="GridLayoutManager" row-count="8" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="730" height="428"/>
+      <xy x="20" y="20" width="750" height="428"/>
     </constraints>
     <properties>
       <background color="-197121"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="2ed63" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="2ed63" binding="Jpanel1" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="10" left="10" bottom="10" right="10"/>
         <constraints>
           <grid row="0" column="0" row-span="8" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -55,48 +55,16 @@
           </vspacer>
         </children>
       </grid>
-      <component id="cb4a9" class="javax.swing.JLabel" binding="IconoAtracciones">
-        <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <font name="JetBrains Mono ExtraBold"/>
-          <horizontalAlignment value="10"/>
-          <horizontalTextPosition value="0"/>
-          <icon value="GUI/Images/parque-de-atracciones(1).png"/>
-          <text value=""/>
-          <verticalTextPosition value="3"/>
-        </properties>
-      </component>
-      <component id="60d75" class="javax.swing.JLabel" binding="IconoEspectaculos">
-        <constraints>
-          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <icon value="GUI/Images/teatro(2).png"/>
-          <text value=""/>
-        </properties>
-      </component>
       <hspacer id="f35d3">
         <constraints>
-          <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="4" row-span="1" col-span="4" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="534f7" class="javax.swing.JLabel" binding="IconoHosteleria">
-        <constraints>
-          <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <icon value="GUI/Images/restaurante.png"/>
-          <text value=""/>
-        </properties>
-      </component>
       <component id="fd205" class="javax.swing.JLabel" binding="IconoEntradas">
         <constraints>
           <grid row="4" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <icon value="GUI/Images/entradas-de-cine.png"/>
           <text value=""/>
         </properties>
       </component>
@@ -116,7 +84,10 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono ExtraBold"/>
+          <horizontalTextPosition value="0"/>
+          <icon value="GUI/Images/teatro(2).png"/>
           <text value="ESPECTÁCULOS"/>
+          <verticalTextPosition value="3"/>
         </properties>
       </component>
       <component id="30533" class="javax.swing.JButton" binding="ATRACCIONESButton" default-binding="true">
@@ -125,7 +96,10 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono ExtraBold"/>
+          <horizontalTextPosition value="0"/>
+          <icon value="GUI/Images/parque-de-atracciones(1).png"/>
           <text value="ATRACCIONES"/>
+          <verticalTextPosition value="3"/>
         </properties>
       </component>
       <component id="96ff7" class="javax.swing.JButton" binding="HOSTELERÍAButton" default-binding="true">
@@ -134,7 +108,10 @@
         </constraints>
         <properties>
           <font name="JetBrains Mono ExtraBold"/>
+          <horizontalTextPosition value="0"/>
+          <icon value="GUI/Images/restaurante.png"/>
           <text value="HOSTELERÍA"/>
+          <verticalTextPosition value="3"/>
         </properties>
       </component>
       <component id="4545b" class="javax.swing.JButton" binding="ENTRADASButton" default-binding="true">
@@ -148,7 +125,7 @@
       </component>
       <hspacer id="b23ae">
         <constraints>
-          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <hspacer id="ec0f2">
