--- a/src/GUI/AddWaiter.form
+++ b/src/GUI/AddWaiter.form
@@ -39,6 +39,7 @@
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-526593"/>
               <font name="JetBrains Mono ExtraBold"/>
               <text value="ADMINISTRADOR"/>
             </properties>
