--- a/src/GUI/RestaurantsPage.form
+++ b/src/GUI/RestaurantsPage.form
@@ -116,7 +116,7 @@
           <verticalTextPosition value="3"/>
         </properties>
       </component>
-      <component id="d0799" class="javax.swing.JButton" binding="añadirHosteleroButton" default-binding="true">
+      <component id="d0799" class="javax.swing.JButton" binding="anhadirHosteleroButton">
         <constraints>
           <grid row="2" column="2" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
