--- a/src/GUI/UpdateSalary.form
+++ b/src/GUI/UpdateSalary.form
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.UpdateSalary">
   <grid id="27dc6" binding="MainPanel" layout-manager="GridLayoutManager" row-count="11" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+    <margin top="0" left="0" bottom="0" right="10"/>
     <constraints>
       <xy x="20" y="20" width="731" height="397"/>
     </constraints>
@@ -171,6 +171,19 @@
           <horizontalAlignment value="0"/>
         </properties>
       </component>
+      <scrollpane id="a7ad4">
+        <constraints>
+          <grid row="8" column="2" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="acf4f" class="javax.swing.JTable" binding="table1" custom-create="true" default-binding="true">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
