--- a/src/GUI/SeeTickets.form
+++ b/src/GUI/SeeTickets.form
@@ -99,7 +99,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <component id="f48f5" class="javax.swing.JTable" binding="table1" default-binding="true">
+          <component id="f48f5" class="javax.swing.JTable" binding="table1" custom-create="true" default-binding="true">
             <constraints/>
             <properties/>
           </component>
